# E2E-Sales-Forecasting

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .coverage  FEATURE_ENGINEERING.md  api.py  data_processing.py  database.py  model.py  plots.py  pyproject.toml  pytest.ini
backend/tests/: test_api.py  test_logic.py
data/: app.db  ecommerce_sales_data.xlsx
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: ui.tsx
frontend/src/services/: api.ts
models/: lgbm.pkl  prophet.json  sarimax.pkl
notebooks-PoCs/: 1. EDA_and_Tests.ipynb  2. SARIMAX_and_Evaluation.ipynb  proof-of-concept.py
