[project]
name = "backend"
version = "0.1.0"
description = "Sales Forecasting API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<3.0.0",
    "scipy>=1.11.0",
    "lightgbm>=4.3.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "shap>=0.45.0",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1.0",
    "joblib>=1.3.0",
    "pydantic>=2.6.0",
    "jinja2>=3.1.0",
    "prophet>=1.1.5",
    "plotly>=5.19.0",
    "kaleido>=0.2.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.9.0",
    "pandas-stubs>=2.3.3.260113",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.3.0",
    "types-requests>=2.32.4.20260107",
    "types-ujson>=5.10.0.20250822",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "backend.*",
]
ignore_errors = true
