[project]
name = "backend"
version = "0.1.0"
description = "Sales Forecasting API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "pandas>=2.3.3,<3.0.0",
    "numpy>=2.2.6,<3.0.0",
    "scipy>=1.15.3",
    "lightgbm>=4.6.0",
    "statsmodels>=0.14.6",
    "scikit-learn>=1.7.2",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "python-multipart>=0.0.26",
    "openpyxl>=3.1.5",
    "joblib>=1.5.3",
    "pydantic>=2.12.5",
    "jinja2>=3.1.6",
    "prophet>=1.3.0",
    "plotly>=6.7.0",
    "kaleido>=1.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.0",
    "pandas-stubs>=2.3.3.260113",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "types-requests>=2.33.0.20260408",
    "types-ujson>=5.10.0.20250822",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "backend.*",
]
ignore_errors = true
